# pico53

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: qa.yml
include/: commands.h  si5351.h
pico/: CMakeLists.txt  pico53.c  picoi2c.c  picoi2c.h
src/: CMakeLists.txt  commands.c  si5351.c
tests/: CMakeLists.txt  test_commands.cpp  test_si5351.cpp
